Retail Lending-Production/src/objects/Disbursement__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Req_from_Customer__c</fullName>
        <formula>Requested_Amount__c * MMR_Ratio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount Required from Customer= Builder Demand * MMR ratio of individual</inlineHelpText>
        <label>Amount Req from Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_from_Bank__c</fullName>
        <formula>Requested_Amount__c * MMR_Ratio_Bank__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount Required from Bank= Builder demand*MMR Ratio of Bank</inlineHelpText>
        <label>Amount Req from Bank</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_paid_by_Bank__c</fullName>
        <inlineHelpText>The Amount to be Paid by Bank for Parallel Funding</inlineHelpText>
        <label>Amount  paid by Bank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_paid_by_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The Amount to be paid by the Customer for Parallel Funding</inlineHelpText>
        <label>Amount paid by customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Contact_Name__c</fullName>
        <label>Bank Contact Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Contribution__c</fullName>
        <label>Bank Contribution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Disbursement__c</fullName>
        <description>changed the formula   in place of these field  Demand_Old_dues__c Replaced with  demand_dues__c.</description>
        <formula>(Requested_Amount__c +Demand_Old_dues__c )-( Test_For_Amt_to_be_paid_by_Cust__c +  Amount_paid_by_Customer__c )-( Amount_paid_by_Bank__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount to be paid by bank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Email__c</fullName>
        <label>Bank Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Builder_Contact_Email__c</fullName>
        <label>Builder Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Builder_Contact_Name__c</fullName>
        <label>Builder Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Email_ID__c</fullName>
        <label>Buyer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Buyer_Name__c</fullName>
        <label>Buyer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_DD_Details__c</fullName>
        <description>Enter the details of cheque/DD Details</description>
        <inlineHelpText>Enter the details of cheque/DD  Details</inlineHelpText>
        <label>Cheque/DD Details (Individual)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_DD_Details_bank__c</fullName>
        <inlineHelpText>Enter the cheque Details of the Bank</inlineHelpText>
        <label>Cheque/DD Details (Bank)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <formula>if(ispickval (Construction_Stage__c ,&apos;Completed&apos;),today(),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Construction_Stage__c</fullName>
        <label>Construction Stage</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cumulative_Disbursement__c</fullName>
        <label>Cumulative Disbursement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Month_Disbursement__c</fullName>
        <label>Current Month Disbursement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demand_Date__c</fullName>
        <label>Demand Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demand_Old_dues__c</fullName>
        <formula>(Opportunity__r.Builder_Demand_till_date__c - Requested_Amount__c )-( Opportunity__r.Individual_Contribution_Till_Date__c - Amount_paid_by_Customer__c  )-(  Opportunity__r.Disbursement_By_Bank_Till_Date__c -Amount_paid_by_Bank__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Opportunity__r.Builder_Demand_till_date__c - Requested_Amount__c )-( Opportunity__r.Individual_Contribution_Till_Date__c - (IF( Active__c, Amount_paid_by_Customer__c , 0 )) )-(  Opportunity__r.Disbursement_By_Bank_Till_Date__c -Amount_paid_by_Bank__c )</inlineHelpText>
        <label>Demand Old dues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Demand_Type__c</fullName>
        <label>Demand Type</label>
        <picklist>
            <picklistValues>
                <fullName>By Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By Stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disb_by_Customer_till_date__c</fullName>
        <formula>Opportunity__r.Individual_Contribution_Till_Date__c</formula>
        <label>Disb by Customer till date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disbursement_Number__c</fullName>
        <label>Disbursement Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disbursement__c</fullName>
        <description>Enter the schedule for disbursement</description>
        <label>Disbursement Schedule</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disbursement_by_bank__c</fullName>
        <formula>Opportunity__r.Disbursement_By_Bank_Till_Date__c</formula>
        <label>Disbursement by bank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Enter the due date</description>
        <label>Due Date of Individual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_bank__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extra_MMR__c</fullName>
        <label>Extra MMR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_Progress_Date__c</fullName>
        <formula>if(ispickval(Construction_Stage__c, &apos;In Progress&apos;), today(), today()+10)</formula>
        <label>In Progress Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Loan</label>
        <referenceTo>loans__c</referenceTo>
        <relationshipLabel>Disbursement Trackers</relationshipLabel>
        <relationshipName>Disbursement_Trackers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMR_Ratio_Bank__c</fullName>
        <formula>1-MMR_Ratio__c</formula>
        <label>MMR Ratio Bank</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MMR_Ratio__c</fullName>
        <label>MMR Ratio</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Not_Completed__c</fullName>
        <formula>if(ispickval (Construction_Stage__c ,&apos;Not Completed&apos;),today()+10,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Disbursements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Paid_Date__c</fullName>
        <description>Enter the paid date</description>
        <label>Paid Date (Individual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid_Date_bank__c</fullName>
        <label>Paid Date (Bank)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PaymentStatus__c</fullName>
        <description>choose the mode of paid</description>
        <inlineHelpText>The payment status of the customer &quot;Eg:Paid/Unpaid&quot;</inlineHelpText>
        <label>Payment Status (Customer)</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Made_By__c</fullName>
        <label>Payment By Customer</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Mode_bank__c</fullName>
        <label>Payment Mode of Bank</label>
        <picklist>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Schedule__c</fullName>
        <label>Payment Schedule</label>
        <picklist>
            <picklistValues>
                <fullName>On Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On start of Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Cellar Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Ground Floor Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 1st Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 2nd Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 3rd Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 4th Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 5th Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 6th Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 7th Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 8th Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 9th Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 10th Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 11th Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 12th Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 13th Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 14th Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 15th Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 16th Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 17th Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 18th Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 19th Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 20th Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 21st Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 22nd Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 23rd Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 24th Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On casting of 25th Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Completion of Masonry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status (Bank)</label>
        <picklist>
            <picklistValues>
                <fullName>Unpaid</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment By Bank</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_mode__c</fullName>
        <description>Select the mode of payment.</description>
        <label>Payment Mode of Individual</label>
        <picklist>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter the Demanded Amount from the Builder for Disbursement.By default the value in this field will be zero.if you remove it you should put some value or put zero to save record</inlineHelpText>
        <label>Builder Demand</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Test_For_Amt_to_be_paid_by_Cust__c</fullName>
        <formula>IF( Opportunity__r.MMR_Chosen_f__c =&apos;Parallel Funding&apos;, 

if(Opportunity__r.Builder_Demand_till_date__c &lt;=(Opportunity__r.Req_to_start_Disbursement_f__c * Loan__r.Property_Cost__c), 
(Opportunity__r.Builder_Demand_till_date__c-Opportunity__r.Individual_Contribution_Till_Date__c), 
if((Opportunity__r.MMR_Customer_Ratio__c * Opportunity__r.Builder_Demand_till_date__c)&gt;= 
(Opportunity__r.Req_to_start_Disbursement_f__c * Loan__r.Property_Cost__c ), 

if((Opportunity__r.MMR_Customer_Ratio__c * Opportunity__r.Builder_Demand_till_date__c)-Opportunity__r.Individual_Contribution_Till_Date__c&lt;0,0, 
(Opportunity__r.MMR_Customer_Ratio__c * Opportunity__r.Builder_Demand_till_date__c)-Opportunity__r.Individual_Contribution_Till_Date__c), 

if((Opportunity__r.Req_to_start_Disbursement_f__c * Loan__r.Property_Cost__c) -Opportunity__r.Individual_Contribution_Till_Date__c&lt;0,0,(Opportunity__r.Req_to_start_Disbursement_f__c * Loan__r.Property_Cost__c) -Opportunity__r.Individual_Contribution_Till_Date__c))), 


if( Opportunity__r.Individual_Contribution_Till_Date__c &gt;= Opportunity__r.MMR_Required__c, 0, 
if(Opportunity__r.Individual_Contribution_Till_Date__c &gt;= Opportunity__r.Builder_Demand_till_date__c,0, 
MIN(Opportunity__r.Builder_Demand_till_date__c- 
Opportunity__r.Individual_Contribution_Till_Date__c,Opportunity__r.MMR_Required__c-Opportunity__r.Individual_Contribution_Till_Date__c))))</formula>
        <label>Amount to be paid by customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount1__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Disbursement__c</fullName>
        <description>These calculation for all records which are there for the particular opportunity</description>
        <formula>Amount_paid_by_Bank__c + Amount_paid_by_Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount Paid by Bank  + Amount Paid by Customer =Total Disbursement</inlineHelpText>
        <label>Total Disbursement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Disbursment__c</fullName>
        <formula>Opportunity__r.Total_Disbursment_till_Date__c</formula>
        <inlineHelpText>Total Disbursement Till Date adding all the Disbursements which are paid uptill now</inlineHelpText>
        <label>Total Disbursement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>demand_dues__c</fullName>
        <formula>if( Requested_Amount__c=( Amount_paid_by_Bank__c + Amount_paid_by_Customer__c),0,Opportunity__r.Demand_old_dues__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>demand dues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Disbursement Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Disbursement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursement Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Bank_Status_paid</fullName>
        <active>true</active>
        <description>To restrict user from making bank payment status paid until the below condition is met</description>
        <errorConditionFormula>ISPICKVAL(Payment_Status__c,&apos;Paid&apos;)&amp;&amp; ( Disb_by_Customer_till_date__c &lt;Opportunity__r.Amount_to_start_Disbursement_f__c )</errorConditionFormula>
        <errorMessage>You cant make bank payment until amount to start disbursement is completed by the customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Amnt_Entered_and_Status_Bank</fullName>
        <active>false</active>
        <description>This validates the amount paid by Bank whne the status is paid</description>
        <errorConditionFormula>OR((ispickval(  PaymentStatus__c , &apos;Unpaid&apos;) &amp;&amp; Amount_paid_by_Bank__c  &gt; 0), NOT(ispickval(Loan__r.Approval_Status__c,&apos;Disbursed&apos; )))</errorConditionFormula>
        <errorDisplayField>Payment_Status__c</errorDisplayField>
        <errorMessage>Please make the Status as Paid and the Loan Approval Status is Disbursed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Amnt_Entered_and_Status_Cust</fullName>
        <active>false</active>
        <description>This validates the amount paid by Customer when the status is Unpaid</description>
        <errorConditionFormula>OR((ispickval(  PaymentStatus__c , &apos;Unpaid&apos;) &amp;&amp;  Amount_paid_by_Customer__c  &gt; 0), NOT(ispickval(Loan__r.Approval_Status__c,&apos;Disbursed&apos; )))</errorConditionFormula>
        <errorDisplayField>PaymentStatus__c</errorDisplayField>
        <errorMessage>Please make sure the Status is Paid and the Loan Approval Status is Disbursed</errorMessage>
    </validationRules>
</CustomObject>